tests/miniJava/neg/000310_mutation.MiniJava
class java { public static void Main ( int String [ ] java ) { { } } }
